# cronos_w-os

./: .gitignore  API_REFERENCE.md  ARQUITECTURA_COMPLETA.md  COMPARACION_CONVENCIONALES.md  Cargo.toml  GUIA_DESARROLLO.md  Makefile  README.md  all_files.txt  boot.asm  check_elf.py  check_elf2.py  check_esp_structure.py  create_boot_image.py  limine.cfg  limine.conf  linker.ld  qemu_debug2.txt  qemu_debug3.txt  qemu_debug4.txt  qemu_debug5.txt  qemu_debug6.txt  qemu_debug7.txt  qemu_debug_acpi.txt  qemu_debug_acpi2.txt  qemu_ser.txt  qemu_ser_clean.txt  qemu_ser_v2.txt  qemu_ser_v3.txt  qemu_serial.txt  qemu_serial2.txt  qemu_serial4.txt  qemu_serial6.txt  qemu_serial7.txt  qemu_serial8.txt  qemu_serial_acpi.txt  qemu_serial_acpi2.txt  qemu_serial_acpi3.txt  qemu_serial_acpi4.txt  qemu_serial_acpi5.txt  (+25 more)
.cargo/: config.toml
bootloader/: Cargo.toml  hardware.rs  ia_colmena_integration.rs  interrupts.rs  limine_boot.rs  main.rs  memory.rs
docs/: ANALISIS_ROBUSTEZ.md  CRONOS_LAYERS_ANATOMY.md  GUIA_DESPLIEGUE_HARDWARE.md  HIVE_AI_REAL_ANATOMY.md  NEURAL_OS_EVOLUTION.md  SINCERITY_REPORT_V3.md
kernel/: acpi.rs  crystal_ui.rs  exokernel_graph.rs  filesystem.rs  firmware_loader.rs  genesis.rs  graph_memory.rs  graphics.rs  hardware_adaptation.rs  ia_colmena.rs  lib.rs  networking.rs  scheduler.rs  security.rs  universal_driver.rs  vga_buffer.rs
qemu/: advanced_launch.sh  launch_script.sh
scratch/: find_assets.py
scripts/: analyze_image.py  build_image.py  build_image_vhd.ps1  check_both.py  check_bpb.py  check_conf.py  check_fat.py  check_fat16.py  check_fat_all.py  check_fat_chain.py  check_img.py  check_rootdir.py  create_disk_image.ps1  create_disk_image.py  (+8 more)
(+164 files in other folders)
